attribute opacity css

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -3,3 +3,9 @@
   height: 200px;
 }
 
+.opacity_text {
+  opacity: 1; /* прозрачность элемента 1 - 100%; 0,5 - 50%; 0,3- 30% 
+  прозрачным становиться и др элементы, если жто свойство не оборачивать в др элемент
+  , например и бэкграунд колор*/
+  background-color: cornflowerblue;
+}
