--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,5 +1,5 @@
 body {
- background-color: yellow;
+ background-image: url("https://media.wired.com/photos/598e35994ab8482c0d6946e0/master/w_2560%2Cc_limit/phonepicutres-TA.jpg");
 }
 
 .img {
