--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,15 +1,34 @@
-body {
- background-image: url("https://media.wired.com/photos/598e35994ab8482c0d6946e0/master/w_2560%2Cc_limit/phonepicutres-TA.jpg");
+div {
+  color: white;
+  font-weight: bold;
+  background-color: dodgerblue;
+  border: 2px solid yellow;
+  height: 50px;
+  width: 200px;
+}
+/*DIV - это контейнер или блочный элемент. 
+  - Распологается со сл строкию
+  - Занимает всю ширину страницы
+  - Указывается размеры длины и ширины контента в бэм модели.
+  - Обычная "коробка" контейнер в который вложить элементы.
+  - Легко двигать
+  - Можно задать нужные размеры
+   */
+
+span {
+  color: white;
+  font-weight: bold;
+  background-color: rgb(255, 121, 181);
+  border: 2px solid lightskyblue;
 }
 
-.img {
-  width: 100px;
-  height: 200px;
-}
-
-.opacity_text {
-  opacity: 1; /* прозрачность элемента 1 - 100%; 0,5 - 50%; 0,3- 30% 
-  прозрачным становиться и др элементы, если жто свойство не оборачивать в др элемент
-  , например и бэкграунд колор*/
-  background-color: cornflowerblue;
-}
+/*SPAN - это строчный элемент
+  - Занимает только длину и ширину вложенного контента
+  - В бэм модели в размере указано auto, а не размеры контента,
+  так как span занимает только длину и ширину вложенного контента.
+  - Невозможно двигать, так как это строка
+  - Невозможно задать размеры, так как
+  span занимает только длину и ширину вложенного контента.
+  - Применяется только тогда, когда нам нужно залить контент
+  например надпись на кнопке, на картинке и т.д.
+  - Можно позиционировать, но это не коробка */
