--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,9 +1,20 @@
+img {
+  height: 100px;
+  width: 150px;
+}
+
+.div1 {
+  /*margin: 10px;
+  padding: 10px;*/
+  background-color: coral;
+}
+
 div {
   color: white;
   font-weight: bold;
   background-color: dodgerblue;
-  border: 2px solid yellow;
-  height: 50px;
+  /*border: 2px solid yellow;*/
+  /* height: 50px; */
   width: 200px;
 }
 
