MARGIN перемещение, пространство, обобщающее свойство

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,46 +1,45 @@
-img {
-  height: 100px;
-  width: 150px;
-}
-
-.div1 {
-  /*margin: 10px;
-  padding: 10px;*/
-  background-color: coral;
-}
-
 div {
-  color: white;
-  font-weight: bold;
-  background-color: dodgerblue;
-  /*border: 2px solid yellow;*/
-  /* height: 50px; */
   width: 200px;
+  height: 200px;
+  background-color: blue;
+  margin: 10px;
+}
+/* Если элементу поставить margin отрицательное значение,
+то будет наслоение элемента или уехать в отрицание (скрыться с экрана
+в отрицательном значении на столько, на сколько задали отрицание*/
+.box2 {
+  margin-left: 30px;
+  margin-top: -30px;
+  background-color: magenta;
 }
 
-/*DIV - это контейнер или блочный элемент. 
-  - Распологается со сл строкию
-  - Занимает всю ширину страницы
-  - Указывается размеры длины и ширины контента в бэм модели.
-  - Обычная "коробка" контейнер в который вложить элементы.
-  - Легко двигать
-  - Можно задать нужные размеры
-   */
-
-span {
-  color: white;
-  font-weight: bold;
-  background-color: rgb(255, 121, 181);
-  border: 2px solid lightskyblue;
+.box3 {
+  margin-left: -30px;
 }
 
-/*SPAN - это строчный элемент
-  - Занимает только длину и ширину вложенного контента
-  - В бэм модели в размере указано auto, а не размеры контента,
-  так как span занимает только длину и ширину вложенного контента.
-  - Невозможно двигать, так как это строка
-  - Невозможно задать размеры, так как
-  span занимает только длину и ширину вложенного контента.
-  - Применяется только тогда, когда нам нужно залить контент
-  например надпись на кнопке, на картинке и т.д.
-  - Можно позиционировать, но это не коробка */
+/*Тема движения с марджин она рабочая, но элементы двигают 
+с помощью других способов, так как при движении элементов с 
+помощью марджин можкт быть схлопывание элементов или поедет 
+вся вёрстка.*/
+
+/*Важно помнить, что вложенные элементы будут двигаться 
+вместе с родителем, поэтому при движении с помощью марджинов
+может поехать вёрстка*/
+
+.child {
+  width: 30px;
+  height: 30px;
+  background-color: yellow;
+  display: inline-block;
+}
+
+.box4 {
+  margin-left: 40px;
+}
+/*Все марджины можно прописать в одно большое свойство 
+margin: 25px (top) 50px (right) 75px (bottom) 100px (left)
+ - расчет идет по часовой стрелке */
+.box5 {
+  background-color: orangered;
+  margin: 25px 50px 75px 100px;
+}
