--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,45 +1,19 @@
-div {
-  width: 200px;
-  height: 200px;
+.container_1 {
+  width: 300px;
+  height: 300px;
+}
+
+img {
+  display: block;
+  width: ;
+}
+
+.container_2 {
+  width: 300px;
+  height: 300px;
+  background-image: url("https://www.scotsman.com/webimg/b25lY21zOmRmYmExYzE4LTZhY2ItNDBkZS1iMTU1LWY4YTVlZWNmYTdkYzowOTcxZDZlOC00MDc1LTQzYzItOWEyOC00YjNlNzFiY2Y1YzI=.jpg?width=1200&enable=upscale");
+  background-repeat: no-repeat;
+  background-size: 300px 200px;
   background-color: blue;
-  margin: 10px;
-}
-/* Если элементу поставить margin отрицательное значение,
-то будет наслоение элемента или уехать в отрицание (скрыться с экрана
-в отрицательном значении на столько, на сколько задали отрицание*/
-.box2 {
-  margin-left: 30px;
-  margin-top: -30px;
-  background-color: magenta;
-}
-
-.box3 {
-  margin-left: -30px;
-}
-
-/*Тема движения с марджин она рабочая, но элементы двигают 
-с помощью других способов, так как при движении элементов с 
-помощью марджин можкт быть схлопывание элементов или поедет 
-вся вёрстка.*/
-
-/*Важно помнить, что вложенные элементы будут двигаться 
-вместе с родителем, поэтому при движении с помощью марджинов
-может поехать вёрстка*/
-
-.child {
-  width: 30px;
-  height: 30px;
-  background-color: yellow;
-  display: inline-block;
-}
-
-.box4 {
-  margin-left: 40px;
-}
-/*Все марджины можно прописать в одно большое свойство 
-margin: 25px (top) 50px (right) 75px (bottom) 100px (left)
- - расчет идет по часовой стрелке */
-.box5 {
-  background-color: orangered;
-  margin: 25px 50px 75px 100px;
+  background-position: center center;
 }
