--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,20 +1,49 @@
-.container_1 {
-  width: 300px;
-  height: 300px;
+.header {
+  font-weight: bold;
+  font-size: 25px;
+  padding-top: 20px;
 }
 
-img {
-  object-fit: cover;
+.under_header {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+/* Даём изображению дисплей блок и размер 
+.plane{
+  display: block;
+  width: 200px;
+  height: 200px;
+  border: solid blue 5px;
+}
+*/
+
+/*Второй способ размещения изображения и задавания
+ ему размеров*/
+
+.img_plane {
+  display: block;
+  width: 200px;
+  height: 200px;
+  border: solid blue 5px;
+}
+
+.img_plane > img {  /*третий вариант стилей для img*/
   width: inherit;
   height: inherit;
+  object-fit: cover;
 }
 
-.container_2 {
-  width: 300px;
-  height: 300px;
-  background-image: url("https://www.scotsman.com/webimg/b25lY21zOmRmYmExYzE4LTZhY2ItNDBkZS1iMTU1LWY4YTVlZWNmYTdkYzowOTcxZDZlOC00MDc1LTQzYzItOWEyOC00YjNlNzFiY2Y1YzI=.jpg?width=1200&enable=upscale");
-  background-repeat: no-repeat;
-  background-size: 300px 200px;
-  background-color: blue;
-  background-position: center center;
+.text_italic {
+  max-width: 800px;
+  padding-top: 20px;
+  font-style: italic;
+}
+
+.list {
+  padding-top: 20px;
+}
+
+ul {
+  list-style: circle;
 }
