--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,49 +1,54 @@
-.header {
-  font-weight: bold;
-  font-size: 25px;
-  padding-top: 20px;
+/* .box {
+	width: 200px;
+	height: 200px;
+	margin: 10px;
+	display: block;
 }
 
-.under_header {
-  font-size: 18px;
-  font-weight: bold;
+.style_box {
+	background-color: blue;
 }
 
-/* Даём изображению дисплей блок и размер 
-.plane{
-  display: block;
-  width: 200px;
-  height: 200px;
-  border: solid blue 5px;
+/* .style_box1 {
+	display: inline;
+} */
+/*
+img {
+	display: block;
+	border: 2px solid grey;
+}
+
+.image_spider img {
+	width: 50px;
+	height: 50px;
+	border: 2px solid red;
+	object-fit: contain;
 }
 */
+/* image_spider img Изображение отноститься именно к этому классу*/
 
-/*Второй способ размещения изображения и задавания
- ему размеров*/
-
-.img_plane {
-  display: block;
-  width: 200px;
-  height: 200px;
-  border: solid blue 5px;
+.test_selectors {
+	border: 2px solid red;
+	width: 500px;
 }
 
-.img_plane > img {  /*третий вариант стилей для img*/
-  width: inherit;
-  height: inherit;
-  object-fit: cover;
+.test_selectors p {
+	color: blue;
 }
 
-.text_italic {
-  max-width: 800px;
-  padding-top: 20px;
-  font-style: italic;
+
+/*Правило для ребенка у которого родитель имеет класс тест*/
+.test p {
+	background-color: blue;
+	color: white;
+	font-size: 30px;
 }
 
-.list {
-  padding-top: 20px;
+.test {
+	background-color: yellow;
 }
 
-ul {
-  list-style: circle;
+/*Доступ к конкретному элементу в конкретном классе*/
+h4.test {
+	background-color: blueviolet;
 }
