--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,54 +1,2 @@
-/* .box {
-	width: 200px;
-	height: 200px;
-	margin: 10px;
-	display: block;
-}
-
-.style_box {
-	background-color: blue;
-}
-
-/* .style_box1 {
-	display: inline;
-} */
-/*
-img {
-	display: block;
-	border: 2px solid grey;
-}
-
-.image_spider img {
-	width: 50px;
-	height: 50px;
-	border: 2px solid red;
-	object-fit: contain;
-}
-*/
-/* image_spider img Изображение отноститься именно к этому классу*/
-
-.test_selectors {
-	border: 2px solid red;
-	width: 500px;
-}
-
-.test_selectors p {
-	color: blue;
-}
-
-
-/*Правило для ребенка у которого родитель имеет класс тест*/
-.test p {
-	background-color: blue;
-	color: white;
-	font-size: 30px;
-}
-
-.test {
-	background-color: yellow;
-}
-
-/*Доступ к конкретному элементу в конкретном классе*/
-h4.test {
-	background-color: blueviolet;
+.userCardContainer {
 }
